# gaft

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  build.sh
apps/: CMakeLists.txt  console.cpp  gui.cpp
docs/: CMakeLists.txt
include/gaft/: gaft.hpp  gui.hpp  interface.hpp  metadata_processor.hpp  program_options.hpp  session.hpp
src/: CMakeLists.txt  console.cpp  ftag.hpp  gaft.h  gaft.hpp  interface.cpp  interface.hpp  main.cpp  main.cpp.bak  metadata_processor.cpp  metadata_processor.hpp  program_options.hpp  session.cpp  session.hpp  uinterface.hpp  util.hpp
